Config to stop scroll page by set overflow on body

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ body {
   background-size: cover;
   text-align: center;
   font-family: var(--body-font);
+  overflow: hidden;
 }
 
 .game__score {
